--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "NODE_ENV=test && jest --verbose --testEnvironment=steps",
     "test:server": "NODE_ENV=test && jest ./__tests__/server-test.js --verbose",
     "test:client": "NODE_ENV=test && jest ./__tests__/client-test.js --verbose",
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js"
+
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^6.1.3",
     "jest": "^29.6.4",
